# rlm-harness

./: .gitignore  AGENTS.md  README.md  hatch_build.py  install.sh  pyproject.toml
.github/workflows/: style.yml  test.yml
docs/: async-tools-and-interruptions.md  background-subagents-and-tools.md  persistent-tools-review.md
skills/: __init__.py
skills/bash/: SKILL.md
skills/bash/scripts/: bash.py
skills/edit/: SKILL.md  __init__.py  pyproject.toml
skills/edit/scripts/: edit.py
skills/edit/src/edit/: edit.py
skills/websearch/: SKILL.md  __init__.py  pyproject.toml
skills/websearch/scripts/: websearch.py
skills/websearch/src/websearch/: websearch.py
src/rlm/: __init__.py  _agent_limit.py  _async_runtime.py  _kernel_bootstrap.py  agent_limit.py  api.py  async_runtime.py  cli.py  client.py  config.py  default_packages.txt  engine.py  kernel_bootstrap.py  kernel_shim.py  mcp.py  packages.py  prompt.py  session.py  session_metrics.py  skill.py  tools.py  tui.py  tui.tcss  types.py
src/rlm/skills/: __init__.py  edit.py  search.py
src/rlm/tools/: __init__.py  base.py  bash.py  edit.py  git_block.py  ipython.py  registry.py  skills.py  summarize.py
tests/: conftest.py  test_agent_limit.py  test_async_runtime.py  test_builtin_skills.py  test_builtin_tools.py  test_context_budget.py  test_dummy.py  test_git_block.py  test_kernel_shim.py  test_mcp.py  test_metrics.py  test_ntc.py  test_persistent_agents.py  test_prompt.py  test_ptc.py  test_session.py  test_skills.py  test_tools.py
tests/fixtures/skills/add/: pyproject.toml
tests/fixtures/skills/add/src/add/: __init__.py  add.py
tests/fixtures/skills/boom/: pyproject.toml
tests/fixtures/skills/boom/src/boom/: __init__.py  boom.py
tests/fixtures/skills/say/: pyproject.toml
tests/fixtures/skills/say/src/say/: __init__.py  say.py
tests/fixtures/skills/whoami_src/: pyproject.toml
tests/fixtures/skills/whoami_src/src/whoami_src/: __init__.py  whoami_src.py
tests/fixtures/tools/: add.py  boom.py
