[project]
name = "rlm"
version = "0.1.0"
description = "A minimalistic CLI agent for true recursion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
    "ipykernel",
    "jupyter_client",
    "nest_asyncio",
]

[project.scripts]
rlm = "rlm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm"]

[tool.uv.workspace]
members = ["skills/*"]
