[project]
name = "rlm"
version = "0.1.0"
description = "A minimalistic CLI agent for true recursion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
    "ipykernel",
    "jupyter_client",
    "nest_asyncio",
]

[project.scripts]
rlm = "rlm.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm"]
